EXP-70: Removed old refs for design specs.
